# oz_django3

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
djangoProject/: settings.py
tabom/: models.py  tests.py
tabom/migrations/: 0001_initial.py  0002_article_updated_like_updated_user_updated.py
tabom/test/: test_like_service.py
